--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -184,5 +184,9 @@
   "driving.cancel_drive": "បោះបង់ដំណើរ",
 
   "driving.finish": "បញ្ចប់",
-  "driving.finished": "ដំណើរបានបញ្ចប់"
+  "driving.finished": "ដំណើរបានបញ្ចប់",
+
+  "chat.title": "ក ារជជ ែក",
+  "chat.with": "ជជ ែកជ ាម ួយអ ្នកប ើកបរ",
+  "chat.placeholder": "វ ាយស ាររបស ់អ ្នក…"
 }
