--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -184,5 +184,9 @@
   "driving.cancel_drive": "Cancel drive",
 
   "driving.finish": "Finish",
-  "driving.finished": "Drive finished"
+  "driving.finished": "Drive finished",
+
+  "chat.title": "Chat",
+  "chat.with": "Chat with driver",
+  "chat.placeholder": "Type a message…"
 }
