Chat notification fixes

--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -188,5 +188,6 @@
 
   "chat.title": "Chat",
   "chat.with": "Chat with driver",
-  "chat.placeholder": "Type a message…"
+  "chat.placeholder": "Type a message…",
+  "driving.new_order": "New order"
 }
