--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -188,5 +188,7 @@
 
   "chat.title": "ក ារជជ ែក",
   "chat.with": "ជជ ែកជ ាម ួយអ ្នកប ើកបរ",
-  "chat.placeholder": "វ ាយស ាររបស ់អ ្នក…"
+  "chat.placeholder": "វ ាយស ាររបស ់អ ្នក…",
+
+  "driving.new_order": "ការបញ្ជាទិញថ្មី"
 }
