--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -188,5 +188,6 @@
 
   "chat.title": "Чат",
   "chat.with": "Чат с водителем",
-  "chat.placeholder": "Напишите сообщение…"
+  "chat.placeholder": "Напишите сообщение…",
+  "driving.new_order": "Новый заказ"
 }
