--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -40,6 +40,19 @@
   "home.accounts.empty": "No accounts found",
   "home.account.default_name": "Account",
   "home.account.id": "id",
+  "home.payout.title": "PayOut",
+  "home.payout.button": "PayOut",
+  "home.payout.bank_account": "Bank account",
+  "home.payout.amount": "Amount",
+  "home.payout.max": "Max",
+  "home.payout.confirm_title": "Confirm PayOut",
+  "home.payout.confirm_body": "Do you really want to make a PayOut?",
+  "home.payout.error_no_account": "Main account ID is not available.",
+  "home.payout.error_bank_account": "Enter bank account number.",
+  "home.payout.error_amount": "Enter a valid amount.",
+  "home.payout.error_exceeds": "Amount exceeds account balance.",
+  "home.payout.error_failed": "PayOut failed.",
+  "home.payout.success": "PayOut created successfully.",
   "home.verification.title": "Verification status",
   "home.verification.need": "Verification required",
   "home.verification.pending": "Under review",
