--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -40,6 +40,19 @@
   "home.accounts.empty": "រកមិនឃើញគណនីទេ",
   "home.account.default_name": "គណនី",
   "home.account.id": "លេខសម្គាល់",
+  "home.payout.title": "ដកប្រាក់",
+  "home.payout.button": "ដកប្រាក់",
+  "home.payout.bank_account": "គណនីធនាគារ",
+  "home.payout.amount": "ចំនួនទឹកប្រាក់",
+  "home.payout.max": "អតិបរមា",
+  "home.payout.confirm_title": "បញ្ជាក់ការដកប្រាក់",
+  "home.payout.confirm_body": "តើអ្នកចង់ដកប្រាក់មែនទេ?",
+  "home.payout.error_no_account": "មិនមានលេខសម្គាល់គណនីចម្បងទេ។",
+  "home.payout.error_bank_account": "សូមបញ្ចូលលេខគណនីធនាគារ។",
+  "home.payout.error_amount": "សូមបញ្ចូលចំនួនទឹកប្រាក់ត្រឹមត្រូវ។",
+  "home.payout.error_exceeds": "ចំនួនទឹកប្រាក់លើសសមតុល្យ។",
+  "home.payout.error_failed": "ការដកប្រាក់បរាជ័យ។",
+  "home.payout.success": "បង្កើតការដកប្រាក់ដោយជោគជ័យ។",
   "home.verification.title": "ស្ថានភាពផ្ទៀងផ្ទាត់",
   "home.verification.need": "ត្រូវការការផ្ទៀងផ្ទាត់",
   "home.verification.pending": "ឯកសារកំពុងពិនិត្យ",
