--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -40,6 +40,19 @@
   "home.accounts.empty": "Аккаунты не найдены",
   "home.account.default_name": "Аккаунт",
   "home.account.id": "идентификатор",
+  "home.payout.title": "Вывод средств",
+  "home.payout.button": "Вывести",
+  "home.payout.bank_account": "Банковский аккаунт",
+  "home.payout.amount": "Сумма",
+  "home.payout.max": "Макс",
+  "home.payout.confirm_title": "Подтвердите вывод",
+  "home.payout.confirm_body": "Вы действительно хотите выполнить вывод средств?",
+  "home.payout.error_no_account": "ID основного аккаунта недоступен.",
+  "home.payout.error_bank_account": "Введите номер банковского аккаунта.",
+  "home.payout.error_amount": "Введите корректную сумму.",
+  "home.payout.error_exceeds": "Сумма превышает баланс.",
+  "home.payout.error_failed": "Не удалось выполнить вывод.",
+  "home.payout.success": "Вывод создан успешно.",
   "home.verification.title": "Статус верификации",
   "home.verification.need": "Требуется верификация",
   "home.verification.pending": "Документы проверяются",
