--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -40,14 +40,15 @@
   "home.accounts.empty": "រកមិនឃើញគណនីទេ",
   "home.account.default_name": "គណនី",
   "home.account.id": "លេខសម្គាល់",
-  "home.payout.title": "ដកប្រាក់",
-  "home.payout.button": "ដកប្រាក់",
+  "home.payout.title": "ផ្ទេរទៅគណនី",
+  "home.payout.button": "ផ្ទេរទៅគណនី",
   "home.payout.bank_account": "គណនីធនាគារ",
   "home.payout.amount": "ចំនួនទឹកប្រាក់",
   "home.payout.max": "អតិបរមា",
   "home.payout.confirm_title": "បញ្ជាក់ការដកប្រាក់",
   "home.payout.confirm_body": "តើអ្នកចង់ដកប្រាក់មែនទេ?",
   "home.payout.error_no_account": "មិនមានលេខសម្គាល់គណនីចម្បងទេ។",
+  "home.payout.missing_account": "សូមកំណត់គណនីធនាគារសម្រាប់ការផ្ទេរនៅក្នុងម៉ឺនុយការកំណត់។",
   "home.payout.error_bank_account": "សូមបញ្ចូលលេខគណនីធនាគារ។",
   "home.payout.error_amount": "សូមបញ្ចូលចំនួនទឹកប្រាក់ត្រឹមត្រូវ។",
   "home.payout.error_exceeds": "ចំនួនទឹកប្រាក់លើសសមតុល្យ។",
@@ -164,6 +165,7 @@
   "menu.transactions": "ប្រតិបត្តិការ",
   "menu.invite": "អញ្ជើញតាមតំណភ្ជាប់",
   "menu.settings": "ការកំណត់",
+  "settings.payout_account": "គណនីសម្រាប់ផ្ទេរ",
   "menu.language": "ភាសា",
   "menu.support": "ជំនួយ",
   "menu.logout": "ចេញពីគណនី",
@@ -172,6 +174,8 @@
 
   "driving.title": "ការបើកបរ",
   "driving.searching": "កំពុងស្វែងរកការបញ្ជាទិញ…",
+  "drive.payment_type_changed_title": "ប្រភេទការទូទាត់បានផ្លាស់ប្តូរ",
+  "drive.payment_type_changed_body": "ប្រភេទថ្មី៖ {type}",
 
   "common.ok": "ទទួលយក",
   "common.decline": "បដិសេធ",
