--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -40,14 +40,15 @@
   "home.accounts.empty": "Аккаунты не найдены",
   "home.account.default_name": "Аккаунт",
   "home.account.id": "идентификатор",
-  "home.payout.title": "Вывод средств",
-  "home.payout.button": "Вывести",
+  "home.payout.title": "Перевод на счет",
+  "home.payout.button": "Перевод на счет",
   "home.payout.bank_account": "Банковский аккаунт",
   "home.payout.amount": "Сумма",
   "home.payout.max": "Макс",
   "home.payout.confirm_title": "Подтвердите вывод",
   "home.payout.confirm_body": "Вы действительно хотите выполнить вывод средств?",
   "home.payout.error_no_account": "ID основного аккаунта недоступен.",
+  "home.payout.missing_account": "Необходимо задать банковский аккаунт для вывода средств через меню настроек.",
   "home.payout.error_bank_account": "Введите номер банковского аккаунта.",
   "home.payout.error_amount": "Введите корректную сумму.",
   "home.payout.error_exceeds": "Сумма превышает баланс.",
@@ -163,6 +164,7 @@
   "menu.transactions": "Транзакции",
   "menu.invite": "Пригласить по ссылке",
   "menu.settings": "Настройки",
+  "settings.payout_account": "Счет для перевода",
   "menu.language": "Язык",
   "menu.support": "Поддержка",
   "menu.logout": "Выйти",
@@ -171,6 +173,8 @@
 
   "driving.title": "Поездки",
   "driving.searching": "Идёт поиск заказов…",
+  "drive.payment_type_changed_title": "Сменился тип оплаты",
+  "drive.payment_type_changed_body": "Новый тип: {type}",
 
   "common.ok": "Принять",
   "common.decline": "Отказать",
