--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -40,14 +40,15 @@
   "home.accounts.empty": "No accounts found",
   "home.account.default_name": "Account",
   "home.account.id": "id",
-  "home.payout.title": "PayOut",
-  "home.payout.button": "PayOut",
+  "home.payout.title": "Transfer to account",
+  "home.payout.button": "Transfer to account",
   "home.payout.bank_account": "Bank account",
   "home.payout.amount": "Amount",
   "home.payout.max": "Max",
   "home.payout.confirm_title": "Confirm PayOut",
   "home.payout.confirm_body": "Do you really want to make a PayOut?",
   "home.payout.error_no_account": "Main account ID is not available.",
+  "home.payout.missing_account": "Please set a payout bank account in Settings.",
   "home.payout.error_bank_account": "Enter bank account number.",
   "home.payout.error_amount": "Enter a valid amount.",
   "home.payout.error_exceeds": "Amount exceeds account balance.",
@@ -164,6 +165,7 @@
   "menu.transactions": "Transactions",
   "menu.invite": "Invite via link",
   "menu.settings": "Settings",
+  "settings.payout_account": "Transfer account",
   "menu.language": "Language",
   "menu.support": "Support",
   "menu.logout": "Log out",
@@ -172,6 +174,8 @@
 
   "driving.title": "Driving",
   "driving.searching": "Searching orders…",
+  "drive.payment_type_changed_title": "Payment type changed",
+  "drive.payment_type_changed_body": "New type: {type}",
 
   "common.ok": "Accept",
   "common.decline": "Decline",
