--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -164,8 +164,10 @@
   "menu.accounts": "Wallet & accounts",
   "menu.transactions": "Transactions",
   "menu.invite": "Invite via link",
-  "menu.settings": "Settings",
+  "menu.settings": "PayOut account",
   "settings.payout_account": "Transfer account",
+  "settings.account_status": "Account status",
+  "settings.payout_account_invalid": "Account number must be 8–16 digits",
   "menu.language": "Language",
   "menu.support": "Support",
   "menu.logout": "Log out",
