--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -164,8 +164,10 @@
   "menu.accounts": "កាបូប និង គណនី",
   "menu.transactions": "ប្រតិបត្តិការ",
   "menu.invite": "អញ្ជើញតាមតំណភ្ជាប់",
-  "menu.settings": "ការកំណត់",
+  "menu.settings": "គណនី PayOut",
   "settings.payout_account": "គណនីសម្រាប់ផ្ទេរ",
+  "settings.account_status": "ស្ថានភាពគណនី",
+  "settings.payout_account_invalid": "លេខគណនីត្រូវមាន ៨–១៦ ខ្ទង់",
   "menu.language": "ភាសា",
   "menu.support": "ជំនួយ",
   "menu.logout": "ចេញពីគណនី",
