--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -163,8 +163,10 @@
   "menu.accounts": "Кошелёк и счета",
   "menu.transactions": "Транзакции",
   "menu.invite": "Пригласить по ссылке",
-  "menu.settings": "Настройки",
+  "menu.settings": "PayOut аккаунт",
   "settings.payout_account": "Счет для перевода",
+  "settings.account_status": "Статус аккаунта",
+  "settings.payout_account_invalid": "Номер счета должен содержать 8–16 цифр",
   "menu.language": "Язык",
   "menu.support": "Поддержка",
   "menu.logout": "Выйти",
