--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -211,15 +211,19 @@
   "driving.start_drive": "Start drive",
   "driving.canceled": "Drive canceled",
   "driving.arrived": "Arrived",
-  "driving.arrived_done": "Marked as arrived",
   "driving.start": "Start",
-  "driving.started": "Drive started",
   "driving.cancel_drive": "Cancel drive",
 
   "driving.finish": "Finish",
   "driving.finish_confirm_title": "Finish trip?",
   "driving.finish_confirm_body": "Are you sure you want to finish the trip?",
-  "driving.finished": "Drive finished",
+  "driving.summary_title": "Trip summary",
+  "driving.summary_cost": "Cost",
+  "driving.summary_payment_type": "Payment type",
+  "driving.summary_overprice": "Overprice",
+  "driving.summary_distance": "Distance",
+  "driving.summary_duration": "Duration",
+  "driving.summary_close": "Close",
 
   "chat.title": "Chat",
   "chat.with": "Chat with driver",
