--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -211,15 +211,19 @@
   "driving.start_drive": "ចាប់ផ្តើមដំណើរ",
   "driving.canceled": "បានបោះបង់ដំណើរ",
   "driving.arrived": "បានមកដល់",
-  "driving.arrived_done": "បានសម្គាល់ថាមកដល់",
   "driving.start": "ចាប់ផ្តើម",
-  "driving.started": "បានចាប់ផ្តើមដំណើរ",
   "driving.cancel_drive": "បោះបង់ដំណើរ",
 
   "driving.finish": "បញ្ចប់",
   "driving.finish_confirm_title": "បញ្ចប់ដំណើរមែនទេ?",
   "driving.finish_confirm_body": "តើអ្នកប្រាកដថាចង់បញ្ចប់ដំណើរទេ?",
-  "driving.finished": "ដំណើរបានបញ្ចប់",
+  "driving.summary_title": "សង្ខេបដំណើរ",
+  "driving.summary_cost": "តម្លៃ",
+  "driving.summary_payment_type": "ប្រភេទការទូទាត់",
+  "driving.summary_overprice": "ថ្លៃបន្ថែម",
+  "driving.summary_distance": "ចម្ងាយ",
+  "driving.summary_duration": "រយៈពេល",
+  "driving.summary_close": "បិទ",
 
   "chat.title": "ក ារជជ ែក",
   "chat.with": "ជជ ែកជ ាម ួយអ ្នកប ើកបរ",
